{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 68,
  "lineage": "5609c94f-5075-1071-ed76-927d66d53332",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772087937:internet-gateway/igw-075fe91a1e7a654a8",
            "id": "igw-075fe91a1e7a654a8",
            "owner_id": "724772087937",
            "region": "us-east-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772087937:route-table/rtb-0dabc5a7a097f3835",
            "id": "rtb-0dabc5a7a097f3835",
            "owner_id": "724772087937",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075fe91a1e7a654a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-route-table"
            },
            "tags_all": {
              "Name": "main-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772087937",
            "id": "rtb-0dabc5a7a097f3835",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0764b65cb2cec2122",
            "region": "us-east-1",
            "route_table_id": "rtb-0dabc5a7a097f3835",
            "subnet_id": "subnet-0cead5fcc1ff37599"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.public_route_table",
            "module.pub_sub.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0821ae3ef0ec8eca9",
            "region": "us-east-1",
            "route_table_id": "rtb-0dabc5a7a097f3835",
            "subnet_id": "subnet-0d9e16a49aae1a8cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.public_route_table",
            "module.pub_sub.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4b25827d48334f2",
            "region": "us-east-1",
            "route_table_id": "rtb-0dabc5a7a097f3835",
            "subnet_id": "subnet-012b603d1d559726e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.igw.aws_route_table.public_route_table",
            "module.pub_sub.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef9ea3bb769c8a8b",
            "arn": "arn:aws:ec2:us-east-1:724772087937:elastic-ip/eipalloc-0ef9ea3bb769c8a8b",
            "domain": "vpc",
            "id": "eipalloc-0ef9ea3bb769c8a8b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-160-106-250.compute-1.amazonaws.com",
            "public_ip": "54.160.106.250",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef9ea3bb769c8a8b",
            "connectivity_type": "public",
            "id": "nat-0c769edcabe8e9bdf",
            "region": "us-east-1",
            "subnet_id": "subnet-0cead5fcc1ff37599",
            "tags": {
              "Name": "gw-NAT"
            },
            "tags_all": {
              "Name": "gw-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgateway.aws_eip.nat-eip",
            "module.pub_sub.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef9ea3bb769c8a8b",
            "connectivity_type": "public",
            "id": "nat-09e74fc593f2bbb73",
            "region": "us-east-1",
            "subnet_id": "subnet-0d9e16a49aae1a8cf",
            "tags": {
              "Name": "gw-NAT"
            },
            "tags_all": {
              "Name": "gw-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgateway.aws_eip.nat-eip",
            "module.pub_sub.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef9ea3bb769c8a8b",
            "association_id": "eipassoc-0d32bbb7e2d0deada",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0913d7d1c6d195688",
            "network_interface_id": "eni-0bac0fafb795da9a3",
            "private_ip": "10.0.3.197",
            "public_ip": "54.160.106.250",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-012b603d1d559726e",
            "tags": {
              "Name": "gw-NAT"
            },
            "tags_all": {
              "Name": "gw-NAT"
            },
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgateway.aws_eip.nat-eip",
            "module.pub_sub.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-08e2c52c1e5231630",
            "owner_id": null,
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gw-NAT"
            },
            "tags_all": {
              "Name": "gw-NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.priv_sub",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772087937:subnet/subnet-0e54dd22276898dde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e54dd22276898dde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772087937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772087937",
            "id": "subnet-0e54dd22276898dde",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772087937:subnet/subnet-032619431bb6c56a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032619431bb6c56a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772087937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772087937",
            "id": "subnet-032619431bb6c56a1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772087937:subnet/subnet-053c95c3a50ffe3d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053c95c3a50ffe3d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772087937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772087937",
            "id": "subnet-053c95c3a50ffe3d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_sub",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772087937:subnet/subnet-0cead5fcc1ff37599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cead5fcc1ff37599",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772087937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772087937",
            "id": "subnet-0cead5fcc1ff37599",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772087937:subnet/subnet-0d9e16a49aae1a8cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9e16a49aae1a8cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772087937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772087937",
            "id": "subnet-0d9e16a49aae1a8cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772087937:subnet/subnet-012b603d1d559726e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012b603d1d559726e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772087937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-0833b79bc84eb01b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772087937",
            "id": "subnet-012b603d1d559726e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.temp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "temp_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772087937:vpc/vpc-0833b79bc84eb01b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc9ad1402789c838",
            "default_route_table_id": "rtb-0d18ca410936725f3",
            "default_security_group_id": "sg-0b538871ea1a0822e",
            "dhcp_options_id": "dopt-0df7963ff0ea9a3d0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0833b79bc84eb01b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d18ca410936725f3",
            "owner_id": "724772087937",
            "region": "us-east-1",
            "tags": {
              "Name": "temp_main_vpc"
            },
            "tags_all": {
              "Name": "temp_main_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "724772087937",
            "id": "vpc-0833b79bc84eb01b2",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}